# dataflow-example-ml-inference

./: Dockerfile  README.md  main.py  metadata.json  pyproject.toml  setup.py
my_package/: model.py
