[tool.poetry]
name = "dataflow-example-ml-inference"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12.0"
apache-beam = {version = "2.54.0", extras = ["gcp"]}
pandas = "2.1.3"
scikit-learn = "1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
